--- a/tema3.tex
+++ b/tema3.tex
@@ -108,7 +108,11 @@ Una forma de generalizar el teorema del producto es hacer infinitos productos co
 Sean $H,K$ subgrupos de un grupo G. Entonces $H \lor K = \{h_1k_1...h_rk_r: h_i \in H,k_i \in K,r \ge 1\}$
 \end{proposition}
 \begin{proof}
+Llamemos productos infinitos al miembro de la derecha y denotémoslo por $P$.
 
+Dados $x = \prod_{i = 1}^r h_ik_i, y = \prod_{i = 1}^s h_i'k_i'$ se tiene que $xy^{-1} = (\prod_{i = 1}^r h_ik_i)(1k_s')(h_s'^{-1}k_{s-1}'^{-1})\cdots(k_2'^{-1}1) \in P$. Por tanto, $P$ es un subgrupo de $G$. 
+
+Por otra parte, como $H,K \le P$ sin más que considerar elementos de la forma $h = h \cdot 1,k = 1 \cdot k$ y como si $H,K \le L$ entonces $P \le L$ al ser la operación producto interna, se tiene que $P$ es ciertamente el supremo de $H$ y $K$.  
 \end{proof}
 
 \subsection{Subgrupo generado por un conjunto.}
@@ -127,17 +131,27 @@ Este definición permite entender mejor la noción de supremo, en efecto, si $H,
 \begin{proposition}[Expresión del subgrupo generado como palabras]
 Sea X un subconjunto no vacío de un grupo G. Entonces $<X> = \{x_1^{n_1}...x_r^{n_r}:x_i \in X,n_i \in \mathbb{Z},r \ge 1\}$
 \end{proposition}
-
 \begin{proof}
+Para empezar demuestro que el miembro derecho es un subgrupo. Llamemos a este conjunto de la derecha el conjunto de las palabras en $X$ y denotemoslo por $T$. 
 
+Si $a = x_1^{n_1} \cdots x_2^{n_r}, b = y_1^{m_1} \cdots y_s^{m_s}$ son palabras en $X$ entonces $ab^{-1} =  x_1^{n_1} \cdots x_2^{n_r}y_s^{-m_s} \cdots y_1^{-m_1}$ es una palabra en $X$. 
+
+Por tanto, el conjunto de las palabras en $X$ es un subrupo de $G$ para el producto. 
+
+Vamos a ver por doble inclusión que ambos subgrupos son iguales. 
+
+$\subseteq)$ Como $X \subseteq T$, claramente, $<X> \subseteq T$ ya que $<X>$ es el más pequeño de los subgrupos que contienen a $X$. 
+
+$\supseteq)$ Como $<X>$ es un subgrupo de $G$ y $X \subseteq <X>$, necesariamente $T \subseteq <X>$. 
 \end{proof}
 
 \begin{proposition}
 Sea X un subconjunto no vacío de un grupo finito G. $<X> = \{x_1^{n_1}...x_r^{n_r}:x_i \in X,n_i \ge 0,r \ge 1\}$
 \end{proposition}
-
 \begin{proof}
+Llamemos palabras directas al miembro de la derecha de la igualdad anterior y denotémoslo por $T$. 
 
+Por lo anterior $T \subseteq <X>$. Ahora, como $G$ es finito, en $\{x,x^2,\cdots\}$ existirán $i,j$ tales que $x^i = x^j, i > j$ luego $x^{i-j} = 1$ y por tanto $T$ contiene a los inversos de los elemntos de $X$. En consecuencia, se tiene la otra inclusión.
 \end{proof}
 
 \begin{definition}[Subgrupo cíclico generado por un elemento]
@@ -250,7 +264,7 @@ Supongamos ahora que n es infinito y supongamos por reducción al absurdo que ex
 
 \begin{proposition}[Cálculo del orden de permutación]
 1. Sean $\alpha,\beta \in S_n$ dos permutaciones disjuntas entonces $ord(\alpha\beta) = mcm(ord(\alpha),ord(\beta))$.\\
-2. Dado $\alpha \in S_n$ con $\alpha \neq 1$ entonces $ord(\alpha) = mcm(longitudes \, de \, los \, ciclos \, disjuntos \, en \, que \, descompone \, \alpha)$.
+2. Dado $\alpha \in S_n$ con $\alpha \neq 1$ entonces $ord(\alpha) = mcm(\text{longitudes de los ciclos disjuntos en que descompone} \alpha)$.
 \end{proposition}
 \begin{proof}
 
