--- a/tema3.tex
+++ b/tema3.tex
@@ -170,7 +170,7 @@ Sea G un grupo. Si $X = \{a\}$ es un conjunto de generadores de G entonces $G = 
 
 \subsection{Teorema de Lagrange.}
 
-\begin{definition}
+\begin{definition}[Clases laterales asociadas a un subgrupo]
 Si G es un grupo, H es un subgrupo de G y $x \in G$ definimos $xH = \{xh:h \in H\}$ y $Hx = \{hx:h \in H\}$.
 
 Diremos que dos elementos $x,y \in G$ están relacionados por la izquierda si $y \in xH$ o equivalentemente $x \in yH$, dicho de otro modo, $xy^{-1} \in H$ o bien $y^{-1}x \in H$. Lo denotaremos por $x \sim_{I} y$.
