corrected layout and added abelian groups classification

--- a/algebra2.tex
+++ b/algebra2.tex
@@ -204,7 +204,7 @@
 \end{mdframed}
 
 \newpage 
-\section{Prólogo}
+\section*{Prólogo}
 
 Las presentes notas fueron confeccionadas por mí durante el verano de 2016. Están basadas en los apuntes de la profesora María del Pilar Carrasco Carrasco del curso 2016-2017. Estas notas tienen lagunas en su redacción aunque los resultados más importantes del curso aparecen razonados. 
 
@@ -217,26 +217,30 @@ Si alguna persona quisiera completar el trabajo aquí realizado, sólo tiene que
 
 \newpage
 
-\section{Tema 1: preliminares}
-\input{tema1}
+\section{Preliminares}
+\input{tema1/tema1}
 \newpage
-\section{Tema 2: grupos. Definiciones y ejemplos. Homomorfismos de grupos.}
-\input{tema2}
-\newpage
-
-\section{Tema 3: subgrupos. Órdenes e índices.}
-\input{tema3}
-\newpage
-\section{Tema 4: grupos cociente, teoremas de isomorfía y producto directo de grupos}
-\input{tema4}
+\section{Grupos. Definiciones y ejemplos. Homomorfismos de grupos.}
+\input{tema2/tema2}
 \newpage
 
-\section{Tema 5: Grupos solubles}
-\input{tema5}
+\section{Subgrupos. Órdenes e índices.}
+\input{tema3/tema3}
+\newpage
+\section{Grupos cociente, teoremas de isomorfía y producto directo de grupos}
+\input{tema4/tema4}
 \newpage
 
-\section{Tema 6: G-conjuntos y p-grupos}
-\input{tema6}
+\section{Grupos solubles}
+\input{tema5/tema5}
+\newpage
+
+\section{G-conjuntos y p-grupos}
+\input{tema6/tema6}
+\newpage
+
+\section{Clasificación de grupos abelianos finitos}
+\input{tema7/tema7}
 \newpage
 
 \nocite{*}
