--- a/algebra2.tex
+++ b/algebra2.tex
@@ -115,7 +115,6 @@
  {:}                  % Puntuación tras la cabecera
  {.5em}               % Espacio tras la cabecera: { } = espacio usal entre palabras, \newline = nueva línea
  {}                   % Especificación de la cabecera (si se deja vaía implica 'normal')
-
  % Teoremas:
  \theoremstyle{theorem-style}  % Otras posibilidades: plain (por defecto), definition, remark
  \newtheorem{theorem}{Teorema}[section]  % [section] indica que el contador se reinicia cada sección
@@ -242,6 +241,12 @@ Si alguna persona quisiera completar el trabajo aquí realizado, sólo tiene que
 \section{Clasificación de grupos abelianos finitos}
 \input{tema7/tema7}
 \newpage
+
+\section{Apéndice}
+\input{apendice/apendice}
+\newpage
+
+
 
 \nocite{*}
 \printbibliography
