--- a/tema5/tema5.tex
+++ b/tema5/tema5.tex
@@ -185,7 +185,7 @@ Los factores de composición de G son los factores de cualquiera de sus series d
 \subsection{Grupos solubles}
 
 \begin{definition}[Grupo soluble]
-Un grupo G es soluble si tiene una serie normal $\{1\} = G_0 \trianglelefteq G_1 \trianglelefteq ... \trianglelefteq G_n = G$ cuyos factores $G_i/G_{i-1}$ con $i=1,...,n$ son abelianos.
+Un grupo G es soluble si tiene una serie normal: $$\{1\} = G_0 \trianglelefteq G_1 \trianglelefteq ... \trianglelefteq G_n = G$$ cuyos factores $G_i/G_{i-1}$ con $i=1,...,n$ son abelianos.
 \end{definition}
 
 Notemos que la solubilidad de un grupo es invariante por homomorfismo.
